formulario de historial, cambio de colores y uso de procedimientos sql

--- a/Sistema_de_Ventas/InventoryForm.resx
+++ b/Sistema_de_Ventas/InventoryForm.resx
@@ -247,6 +247,117 @@
         CAIAgCAIAgCAID5ZANkID5sBAfCwIBsBANgID7sBANgID7soD7ZAEAQBAEAQBAEAQBAf/9k=
 </value>
   </data>
+  <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAkGBxEQEg8QEBAQEBAQEBARDw0WEA8SDw8QFRgWFhcWFRUY
+        HiggGBolHRcYITEhJSkrLi4uFx8zODMsNygtLiv/2wBDAQoKCg4NDhsQEBstJR8gLS0rKy0rLSstLS0t
+        LysyLS0wLS0tKy0tLSstLS0vLSsrNS0tLS0tLy0tLS0tLS8tLS3/wAARCAC/AQgDAREAAhEBAxEB/8QA
+        GwABAAIDAQEAAAAAAAAAAAAAAAECAwUGBAf/xABJEAACAQIBBQgNCgUFAQEAAAAAAQIDEQQFEiExUQYT
+        FUFxkZLRBxQXIlJTVGGBk6Kz0hYyNGNyobHD4fAjM3SCsjVCYpSjJST/xAAbAQEAAgMBAQAAAAAAAAAA
+        AAAAAQIDBAUGB//EADcRAQABAgIGCAUEAgIDAAAAAAABAgMEERITITFBUQUVMlJxkaHRFDNhgbEiU8Hh
+        ovAGQiM08f/aAAwDAQACEQMRAD8A+lGVyQAAAAAAAAAAAAFglZRBknNITkWBkmwSWAiwRkZoMkOJKMlb
+        AAgAAAAAAAAAAAAAAAAAAAAAAAEglZRITksEgAAAAAAAAABVxCMlWiUAQAAAAAAAAAAAAAAAAAAABKiE
+        5LpELAACyiDJOaE5FgJAARYBmgyQ4hGSoAA0BRxJVyQEAAAAAAAAAAAAAAAAABMUExC5CwBKiDJYJSAA
+        ARJpaXoS1viQFadSMvmyUuRp/gDPNcAAAhoCriEZIAAVlElWYVCAAAAAAAAAAAAAAACYoJhchYAskErA
+        AAE5oTklRITk4/H15YmrJXtTg2ox4rLRe217S+6GnlN6uY4QmtkyrQW/wzo5tru6zkno1bPMInPeXLGq
+        jSol0mTMYq0FO1n/ALo7H5vMVls0TpUxVzerNC2SLAAgCVWgjJUIAKSRKsoCAAAAAAAAAAAAACQSyIhY
+        AtFBK+gJVqTUU5NqMVduTaSS2tvUENd8oMF5Zhf+xS6ydGeSNKnmst0OC4sXhm+JKvSbb2JX0saM8k6d
+        PNocRugrybcZKEeKKUXo87estow0KsTXM7NjDwziPGy5odQyhXX3ObyUq8ou8XZ3vfRrGStNyqnPKd7P
+        WynWnFxlUk4vWu908ewZQmbtcxlMq4bH1aWiE3FbLRf4oZQU3q6YyiXojlzEJ33y/mcYW/AZQt8Rc5t3
+        hN0mHcVv9ajQqccJ1Iwv545z0orozwblu9FVOcsr3Q4LyzC/9il1jRnkvpU83swuNpVo51GpTqxWhyhO
+        M0nsvFkZTCc4nczhKkkEKhAwMbRKoEAAAAAAAAAAAAvFELQkJWigQsEpCXz7sv4mcaWFpJtQqTqSnHws
+        xRzU9q76/MZbUbWG9OUOFyNuYxmMhKphqLqQjLMlLPpRtKydrSkuJoyVV0072OizXXGdMNphtw2Uac4V
+        KmGcYU5RnOW+0HaEXduyld6EV1lM8U14a7FMzMfh0ZRogAAAAAanLW5vF4xwlhqLqqCcZvPpxs3Zpd80
+        WiuKd7ZsWa64maYaqtuEylCMpywrUYRlKT32g7Rirt6JbEW1tPNmnC3Y4fhbsdYqdPH0FBtRq58KkeKc
+        c2UlfkaTFyP0q2pnSyfbDXbIBWSCFQIkgiVCVQAAAAAAAAAAJBLIQsAZAkAmKCYfOOzJqwXLX/LMtriw
+        3+Db9hf6JiP6qXu6ZS92m3guxPi7zEUlOM4PVOMot8dmrGFtVU6VM0zxaD5IUvG1fY6i+slodW2+9Pp7
+        HyQpeNq+x1DWSdW0d6fT2PkhS8bV9jqGsk6to70+nsfJCl42r7HUNZJ1bR3p9PY+SFLxtX2OoayTq2jv
+        T6ex8kKXjavsdQ1knVtHen09m0yRkuOGjKMJSlnSzm5WvqtxFZnNtWLFNmJiJ3rZb+jYr+nr/wCEhG9l
+        q3S+E7gfp+E+1P3czcr7Li2u2+5yRrNuXjx1Watmel6G+Yw3aq47LfwVmzXnN37MmEqucE5Kz0p+gtaq
+        mqnOWHGWabV2aaZ2LmRqAGNolUCAAAAAAAAABaBC0LBK0QQsEgFyFnzbsyasFy1/yzNa4sF/g2vYalbB
+        4l7MTJ/+dMpe7TbwXy58Xb0MdGcs2FpKybnF3gr3sr7dGo0reIt3KsqJzyjfG7w8W4yYzEb3CU7XtbRt
+        bdiuLxMYezN2Yzy4eM5JiM5yarhyXi49JnC6/uftx5z7MmrOHJeLjzsjr+5+3HnPsas4cl4uPOx1/c/b
+        jzn2NWcOS8XHnY6/uftx5z7GrOHJeLjzsdf3P24859jVnDkvFx6THX9z9uPOfY1b0Y7Eb5hMRO1r4evd
+        a7NQkjvYLExibVNzLLPh4TkxXIyiYfENwP0/Cfan7uZ1q+y4drtvudSainJ6km3yGlcuU26Jrq3RGbeo
+        omuqKY3y02DrTnJtv5zvbYeMw/TGLqxEU07dKd08M+U79j0d7C2bdrloxvbdKx7d5mZznNEgrKoFZhEq
+        kqgAAAAAAAAC8SFoSErxCUgTEJhYhL5t2ZNWC5a/5ZmtcWC/wbbsMq+DxC24qXu6ZS92m3guxPi72nRj
+        HUrXbk/PJ63ymvTTTTujJuJrUlNOMldPWit61RdomiuM4lMTk8XA9LZLpM5vUuF5T5ytpycD0tkukx1L
+        heU+cmnJwPS2S6THUuF5T5yacnA9LZLpMdS4XlPnJpycD0tkukx1LheU+cmnJwPS2S6TJ6lwvKfOTTlG
+        VKUYYXExirJYevZf2SOjYs0WaYoojKIY65ziXw3cD9Pwn2p+7mdGvsuJa7b7FlqtojTWuWmX2V+/uPKf
+        8gxehaizG+rbPh/c/h6PomxnXN2eGyPH/fytk2jZX5jQ/wCN4TTuVYir/rsjx4z5flk6Vv7Itxx2y9x7
+        FwkSBKgQiQRKhKoAAAAAAAAAyIhcAjEV404uc3aMbXdm/NxAqqimM5XpzUkpLSmk09qYTE57WSJC0JA+
+        bdmTVguWv+WZrXFgv8G17Dn0LE/1M/d0yl7tNrBfLnxdnhFUcs6ajBLvVCK716HebbV9OiyNGzrpqmq5
+        lHCIj8+0N3Yy5SUnTnmXztGrXa6vb0GLpGLs4arVZ6X035Z7cvstTlntc7vdTwanRmeP1eJ7tflUzbDe
+        6ng1OjMavE92vyqNhvdTwanRmNXie7X5VGw3up4NTozGrxPdr8qjYb3U8Gp0ZjV4nu1+VRsN7qeDU6Mx
+        q8T3a/Ko2NrXU1gq+ffO7XxGvXbNla56/oyLsYemLuef135Z7PRr3MtuT4nuCf8A+/Cfan7uZ2rkxFMz
+        LiWYzriIfVVJ1akp8Tdor/itR8v6QxNWKxE1U8ZyiPSHt7NuLFmKeW/+W9pwzYpbPxPe4HCxhrFNqOEb
+        fHj6vMYi7N25NfMNtgAMYQMDGSoAAAAAAAAAMhC7y5VqONKpJSzGo6JW032Ll1ekmGO5OVMy5erjK9fv
+        bznoXeRTs7cbS1lsohpTXXXsRDH1oLe3UnCN0mtOfBLZfSuQZEXK4/Tm7ilqjpvoXfbfOY3TjcsEvm3Z
+        k1YLlr/lma1xYL/Btuwy7YPEPZipe7plL3abeC7E+LvN/WdmapNXzbq9tuhmvp06Wjnt35fRuJr1lCLl
+        LQlrKX71Fmible6ExGbwcNU9k+ZdZy+vMPyq8o91tCThqnsnzLrHXmH5VeUe5q5OG6eyfMusdeYflV5R
+        7mrk4bp7J8y6x15h+VXlHuauThqnsnzLrHXmH5VeUe5q5OG6eyfMusdeYflV5R7mrlbKdaM8LiZR1PD1
+        +X5kjqYe/Rfoi5RuljrjKJfEtwmBdSvvulRoxenbKacUuZtmp/yHGanDauN9ez7cfb7sPQ2G1l7WTup/
+        PD3fXMlUOPZ+0ea/4/hNdiZu1bqPzO7y3+Tr9J39G3oRvq/DaM9w8+oSqAYwgAxkqAAAAAAAAGOrXUde
+        u17bTSxePs4bZcnblnEc/wCGa3Zrubnljj5WtZN+F+iPP0dPXYo0ZiJnnPjxiI5fVvThKc8+HJgy9QnO
+        EpxqXpqMW6SWuzve/wB/oPV2rlFcRNM5uPiLdeU/h4dz2Pp0XNVO9zs207N6r6HblMkww4e5TTnm82Ws
+        VGtVcoJ2zVG9rOTV9NvTb0CFL1cV1Zw6jI+BdGGmcpOSi2m7qDS1L98RSZb1q3oRve8hlfNuzJqwXLX/
+        ACzNa4sF/g23YaV8HiVtxMl/50yl7e28F8ufF2+EwMaV81JXd3rvqsldvUuJGlZw9uznoRv/AN8o4Q3G
+        TF0FUg4N2vbTsa0ojFYenEWpt1cf/qYnKc2r4C+s9j9Th9QT+5/j/a+sOAvrPY/UdQT+5/j/AGaw4C+s
+        9j9R1BP7n+P9msOAvrPY/UdQT+5/j/ZrDgL6z2P1HUE/uf4/2aw4C+s9j9R1BP7n+P8AZrGfH4dU8JiY
+        J3th6+na3CTO5g8NGHt024nPL+ZYrk5xMuG3HZL3mhTi1acu/qbc6XF6FZHium8b8Tiaqo7MbI8I952u
+        xgMP8Ph4pnfO2fGfZ3WGp5sUvS+U9f0Vg/hcLTRO+ds+M+25wcXe1t2auG6GRnRayhKoBjCADGSoAAAA
+        AAAAeLKF9GjQuPa2eY6fi7Vo/p/TTx5zP04ZZeroYLRjPbtngriK8XCMUrNW4tRq43HYe7hqbdunKYy4
+        bue3jmy2rVdNc1TOxfMTouOeqTm8zPdlebdktOtvV6TudDW6KcNE0xt26WzLb/TTxmdVUxn4NblHIChD
+        Opuc5RzU4Zuc5PRdq2rbbSdaJc65h8qc6WfD7nI5qcpzU2otNJLMevVxsaS1OGjLbO10FNWSV27K13rf
+        KUbcblgl827MmrBctf8ALM1riwX+Da9ht2wWJezEy93TKXu028F8ufF2mFxM5y+ZKEF3rz0lNzs27JcS
+        28ZoWb1Vyqf0zERz35+0c+PBuMuUazhTlKOtWt5rtK5j6Qv12cPVco3xl+cs/stTGctDwnW8Y+aPUeW6
+        1xff9I9mXQg4TreMfNHqHWuL7/pHsaEHCdbxj5o9Q61xff8ASPY0IOE63jHzR6h1ri+/6R7GhBwnW8Y+
+        aPUOtcX3/SPY0IOE63jHzR6h1ri+/wCkexoQ9uJx77WvKznUzqa0fOvdN25LnXr6Rrjo/W1dqrOI89/l
+        6smHsxXdy4RtlpqeJhSnh4S0yr1d7guSMpyfJ3v3o4PQ2E+JxcZ9mj9U/wAR5+mba6Qv6u1OW+djpT6A
+        80hgVJVAMYQMDGSoAAAAAAAAVqQzk09TMGIsU37c26s8p5L0VzRVpQrDCxTUkrWvo4rmpT0Xh6L1N2iM
+        ss9m+PpO3dkzfEVzRNMvn+6TEVsdj+DoYqEaKkpppR7ypGKk43i7ylFp6Lqzb2HXpyiM2nVMzOUSzbhM
+        RiKONxeDcoYhKWdWxMpTc7QSgs16bvTFZreizIrymIla3M5zDaboMpVoYipGFWcYrMtFPQrxTONiL1dN
+        yYiXocHh7VVmJqpiZ/tvdx1edWjUlUlKclWcU23dLNg7fezUrxN2J7UpvYe1TOymHJ1Ms4m7/j1Nb4zJ
+        r7nelsRhbPdgxi7ZjDtj+Nmp5ufpzb2vbmXMZIxF2P8AtLHOFszPZh1nasMLgm8NBUM6NKcsxWvOWYm3
+        52tBgjE3Zr21SxW7VEVZREZPHkDKVV1oqU3JNNWeriN3D3Kqq8pla/bppoziHYTaSbdkraW9VvObddVN
+        NMzVu45tN49+w22jzROf8R0fzo9FsqjfsNto80R8R0fzo9DKo37DbaPNEfEdH86PQyqN+w22jzRHxHR/
+        Oj0MqjfsNto80R8R0fzo9DKo37DbaPNEfEdH86PQyqabKmIVWqoxs4U1aNtTb1tfviPMdN4ym9d0aJ/T
+        TGUZbvr7OxhLert5zvlwLyt2xlvCU4u9PDSqUo7HPMnnvn0f2npegcF8Pg9OrtV/qnw4em37uB0hf1l/
+        KN1Oz3fVzrtREiUSqEIYFAhEgiVCVQAAAAAAAABaDIWhzO6XcXSxtSnUzlQzYzU3CCz6km04tvVo77iv
+        p1l6a5hWqiJZtyG5Olgoxm1nYm0lOspSzbPiitCtZLWtd9IqqmU0URDUbp/pNX+z/CJxMV82f94PS4H5
+        FP3/AC9GQd0PasJQ3rfM6bnfPzbaIq1rPYalVGbLXb0pzzaSTu29rbLsr30fmx5EXjcxzvbvFZbz6G8b
+        3bvYRz8+/wA1rit5ikW8qs2OKMpzYdz38+H72G5hvmMeI7DtcoUHUpygnZu1tmhpmTH4erEWKrdM7Zy9
+        JzaVM5S0nBFbZHpI831NiuUebLpwcEVtkekh1NiuUeZpwcEVtkekh1NiuUeZpwcEVtkekh1NiuUeZpwc
+        EVtkekh1NiuUeZpww4rJ9SnFyklbVod3d+Yw4jo3EWKJrriMvFlsxFyuKXhrydOhWqLRKNKpKL/5KLaN
+        DAYX4vFU2+G+fCPfd93RxV3V25mPs+Vdj53yjg29Lc53fG3vcz6dVsh46ic6n34wsqjJQBCsgSqEKzCJ
+        VJVAAAAAAAAAExYTC5CyUwOF3T/Sav8AZ/hE4+K+bP8AvB6LA/Ip+/5ayKu0trNdts8sOrPS9RbRVzei
+        h82PIiY3KzvXJGy3Pfz4fvYbGG+Y18R2HbY3Eb3CU7Xtay87djNjMT8PZm5lnl/M5NKIznJqOHJ+BD2u
+        s4HX17uR6smrg4cn4EPa6x19e7kepq4OHJ+BD2usdfXu5HqauDhyfgQ9rrHX17uR6mrg4cn4EPa6x19e
+        7kepq4YcTujjDM35ZsZzUIyjGUnntNq6XFZPSZLfSNzF50VREREaXls4+K1MRTObWZYxcatCvKEc2Co1
+        ktFr2jLTY6PReHs0062iMpq2eUq37tVUZS+U9j3/AFHB/bn7uZ3qtziUb336TMDLKpKACjCEAY2yVQIA
+        AAAAAAAAAC8WQtDxZZqyhScotxd46Vymtiq6qbedMt3A0U13opqjONrla6z5OU++k7Xk9btoOPVXVVOc
+        y9DRRTRGjTGUOrwuRcM6EJujBydJSctN87NvcxTVObVqrq0ss+Lkd6WwyZy3MoerDU421LQxpSjRhuMg
+        4KnUlNThGSUU0nfXcrVVPNhvfpiMlsrUI0asXSiqfeJ6Nt31FqLlcbYlFumK6f1bXpyRi51ZSp1W5xkr
+        NPi47qxuWP8AzxVRd2xMMGJopoiJpjJtOCKPgvpSKdTYTuz5z7tXTk4Io+C+lIdTYTuz5z7mnJwRR8F9
+        KQ6mwndnzn3NOTgij4L6Uh1NhO7PnPuacnBFHwX0pDqbCd2fOfc05Y8RkKhOLi4vzPOd09panofC0znE
+        T5z7o05c3lnCbzRxFO1s2jVtsazZaToWrdNuIppjKIUqnOJfKex9/qOD+3P3czcq3OVRvffDEyAFZMEq
+        hCJMIlQlUAAAAAAAAAAAEphMPDl7+S/tR/E08b8qfs6HRvz48Jcwcd6J2+DrR7Xgs6N95StnK980xTva
+        NUTp/dxCMreenC6nykIb3c5NKc7tLvVraXGVqYL8bIU3QyTqRs0/4a1O/HIU7k2I/S5DdVlivhIUqmHq
+        b3OVTNcs2Erqzf8AuTOr0ZTE11Z8nP6XuVUW6Zp5/wAOd7oGU/K36qh8J2dVRycD4q7z/B3QMp+Vv1VD
+        4RqqOR8Vd5/g7oGU/K36qh8I1VHI+Ku8/wAHdAyn5W/VUPhGqo5HxV3n+DugZT8rfqqHwjVUcj4q7z/B
+        3QMp+Vv1VD4RqqOR8Vd5/h5sfuyyhWi4VMS5JqUf5VFaGrNXUSNVTyTGKu8Z/Dzdj9f/AEcH9ufu5kVb
+        k0b33wwsqGwKBABRslVAQAAAAAAAAAAAAB4MuP8Agv7UfxNTG/Kn7Oh0b8+PCXNHGejAAHpwup8pCGYA
+        Brss5AljlTpRqKnmzzs5xcr6GtV0dLo2rRrqn6OT0tTpW6Y+v8Nd3LanlcPUy+I7Gt+jg6iOZ3LKnlcP
+        Uy+Ia36J1EczuWVPK4epl8Q1v0NRHM7ltTyuHqZfENb9EaiOaO5bU8rh6mXxDW/Q1EczuW1PK4epl8Q1
+        v0NRHM7ltTyuHqZfENb9DURzbvcpuDhg63bFSrv1WKap2hmQhdWb1tuVrr0v0UqrzXoo0Xa3SKMmbGFQ
+        CsmFZVJQAAAAAAAAAAAAAA1+XP5L+1H8TUxvyp+zodG/+xHhLmzjPRrUnpRMb0S9OetqL5wrlKMNqfKz
+        FKzKAA9uSf5iOh0f2qvBzOlOxT4ugOo4gAAAAAACrkDNDYRmgCspBEyqSqAAAAAAAAAAAAAAARJX0MJi
+        cmHtOn4P3sjKE6VXNKwtPwfvYyhMV1c1+06fg/eyMoW0quZ2nT8H72MoNKrmdqQ8H72MoNOrmssLT8H7
+        2MoNOea0MNBNNLSvOyciaplnCAAAAi4EOQM0NhCAAFXIImVSVQAAAAAAAAAAAAAAAAAAAJTCc1kyE5pC
+        QABIC4C4C4EAAAENhGarZKM0BAAAAAAAAAAAAAAAAAAAAAAAAlSCc05xCc1gkAAAABsCrkEZociUZoCA
+        AAAAAAAAAAAf/9k=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIADrEQAAZgAAAICAAAABACAAKAgBAFESAABAQAAAAQAgAChCAAB5GgEAMDAAAAEA
