--- a/Sistema_de_Ventas/SalesForm.resx
+++ b/Sistema_de_Ventas/SalesForm.resx
@@ -118,58 +118,58 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="processButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAABGdBTUEAALGPC/xhBQAAAUFQTFRFU8mq
-        MpN38sitWl5mMDQ9fqh68vn3////MC46MW1fMpZ59suvNzpDi4yOHSc1uaCNKzE768OpVU9R2VtC8owd
-        Pr+7OJXSKis5TWFTaotpUlZeMC058cSnLiY09trISqeQMX1pt7y9hnRs+unfHSIuruLTEIpqQ4p618is
-        NTxBZGZhz8isRUhPwMis88yx8r2X8ogA2VpB8p5RlcO1k6vDv8Wx1b+0eaTHxLm55JB36qeOTsGi8pEp
-        c9G4LR8xP6iLOmZgYn9jTL6faF1bfX6CbnF2yeziltvITbKZP0tIqrGWhKaLaMmq8uHUkcmrRlVNqcir
-        1vDonN3LWXJcdp10PEZFSJ2JQoZ4VmZh0LmboIZ4ABQmAAMgWZuA4sisjMmrnq6SvbeccKGGdGZhzqyX
-        1ksx0L21IHhlLBQrgrmoq9HFKsAagwAACgRJREFUeF7tnf9f2zYax0OWEYZpSOh2oYOQrh0UNmC327V3
-        XUdaoOVLx9puLXSwHXfburtb//8/YLL1kSUnwdEjf5GS6v1DXkQk0eeN7Mey7LSVOufgcKcySewcHsCM
-        G66ifbJYjdwiw8kaPsmOMMTzSYQbTuoIhrBRrEzoPig4YIb4cVKpVw7w06RyUDnET5PKYWWS60zIpPt5
-        PB6Px+PxeDwej8fj8bxLHHXvXE13D68aX+5s9DqdpavodHqnd/DK8eSo1qmNonM6xuPYFX7t9sYAc+02
-        /+XM0hFeP3Yc9bhCe2P3/WHsbszwF3TkKK5+f7hzUI8fpvnDD+xh+oedVTyssoe1hw4M/QbP316E0SDP
-        +TDOHOMd4YXZ6fo0Y9RDfW1qasq25BnfRmeuFmSKfBQ7Z3hPhY2QFpGhbcnjKHytBpnhNKOXzDzCe8iG
-        U1Oz1iT3MIQv4TKcRQwi3mRgGGJHEoW0fQMuw7nB98SeKKdmhgwLktgN26/gMpxX3LCT2dDC5irGMN0Q
-        Y5iHYUipktgP28OPhYKX2ErxpqyG5Y4kDoencBkOf5E8IGY2ZMw+fIBPK5jXS1H61EHEEHbi6XcehoyS
-        JDEnS6mmu1ywtoF35GbIKEPyTMxLr5jVvFqEYK+Ld+RpyChe8rVQbB8vDnLaxiD34jlbzoaMoiXv9Pi+
-        WGvODMJ/U1uSk1JG3oaMYiX3HvU6S6FOc5CwmZ3lP0r0X4Aho1DJB2cfPGL8+Fk/P4bNr8/6ui7GkFH4
-        Pvl50M8WfpOkMENGsZKfV/uwYMgoUNIRQ0ZRku4YMgqRdMqQkb+ka4aMnCUdNGTkKemmIQP9ZscbCryh
-        wBtqg36z4w0FY2h48uzF1vr6+jbEJJesdZDvYDCS8/PzX55++y/kNAcxTTnZ2g5PlOCkwbK24XJ0Cha0
-        nmaURFJD2EkhkutCMMQ7guAXZDUDUY14VqX6mRiGjt8irQkIa8ILmUEfE0PmmEERaQ14ZiJYDe59okli
-        +8igiLh0TtA3keDip0+1+LlvD0BeOshLZ+D4p0dw0cBa4wh+ShoG56bHR+Qlc2K0jbKk87c06RvDwPSg
-        gcBkXtDLKIcf5TTA6wXBUySmgsBkDDdSc4yPighM5hIdl0fLcEdEYDLotkyQmAoCUzEtNBkwLTVITOWZ
-        WghYVWgVQfjBEtODPhJTUUpp0LrYn2s28qc5t3+hzHxNiykSU4lLaVC9xbLwm9fypsn+bhexomkxRWIq
-        opQGrc0G8jCa7XxQ/mCNhZZwvDQrpkhMBb0GrYZMM9N+vrt7Izu7L4/FDQCM5hzvinVWpmFcSjelYDv9
-        HkUS8U0cjOa++HOaFVNEJvJv3mlwS9lE029vo3JDKjbm0ZtZMUVkIiilLSk44v49OlKxOQfD/yAzDUQm
-        ssW7vIgNR9y+Z4LcUBtvIkXDYorIRHgpDfbjvXADsXIEN6YymjiTMiumiEwEi6NzwjD1ZnZTjsWni1rT
-        QmYaiEzjhPdYjYcwzzoagzvEmeECdkSjYorMNFBKCzZ8GRtuwvBXhCaBzDTErDQ2HHG/vhmL8VYqxtCo
-        mCIzjS30GB/vm895qFw5xYfH+6FZMUVmGutRh9XgNzmISJUjspY2UEvN1tuQmUbUH+txPj4eFlBM41Iq
-        joeM0gxFh3JHzP+QjxvEGaLQsD8pQpNAZhKilKqTmrzLqTL1lkNoVEwRmoRcwgj2FcXT9K8HUYi/uMgQ
-        eyHDaO6N0CRQSiPUE+Dhd3vTORVfPg1piJMnhtFCBkKTQCkNCar7yjlwjd/5nBHl82pNZQRZbybFFKFJ
-        JFaDg/mFcKGmEBqNhXgfjDCZmSI0iUSn1SB4c7G/UAS/Xbzpu3xhUkwRmsLAajAupRQBehCYzL2RmkJi
-        NbhcTIopUlMwvrCWHZNiitQUSr+wJjGZeyM1hfIvrEkMLrEhNQV0ZgWDYorUBMQShhUMiiliE7BYSo2K
-        KWITUErptsJgE1qWFQabdFqU469BMUVsArKUbt+/Lvk6avriw29i/hY5Lof/P4Eges3ybTwLWYmaVvAs
-        5DYXwrMIqWhQTBGbgCyl2/e/jPkdhn/9MKYIw+olcuuD2ATQFYMZYgCvX/+yJEP6/QqIrY8yK7VhSC+m
-        yK1PvIRhyZBcTJFbH7WU2jAkrwojtz78wlqEFUNyMUVufZRZqZVKQ77Ehtz6oKMQK4bkYorc2qizUiuG
-        5GKK4NoopdSSIXVVGMG1UU/wt+//jhmNMqeRFGRILaYIro26GswcJVe2YPYcMdik06IK0ospgmujrAbb
-        IThHcl0QXBsxMvagrgojuDaJLcYK1IUMBNdFLaWWoBZTJNelbwkDlSAELVirjuAt+H0Eb9GqK3gSwVsA
-        de6N5LokS+ndryS8BN37u4R/c2n5tkL0muoKnoXwo8U2noWscCE8i4gaBNSFDCTXJbEavPzVR5K7oU9w
-        7y+Sf3BDHNMiwoasszZqMUVyXRKl1I4htZgiuS7ohGPJkDj3RnJNkhfWLBkS596IrkmylNoypBVTRNck
-        eWHNliGtmCK6JskLa7YMacUU0TVJXlizVWloCxmIrkmyK1uGwSzCa4HoevTdo2DNkFRMkV2P/lmpLUNS
-        MUV2PfrvUVi/K+G7aOufkv/yV68oRA2JFj5J2saziKhlyNtiaMUU2fVQVoOvAqcVEWjKHdpCBrLrYfMe
-        BRVSMUV2PdCBfRBeC2TXYuB2L1uQiinCa+HAEgaHtJCB8Fr0l1JrkFaFEV4LjVJaDqRiivBaXOIoYJ/L
-        WQE0UkD4FPbOumDeHf53E0AjBWik0P1/B+B78i6A/zBrqXdz5ChCI4X4/3RykSVv6A1DvKFVcjVsfvye
-        O3yML9Z4QwY0UvCGVvCGCtBIwRtSePL42rVrj5/gWQYcNXzC9DiZHd00lILZFZ00VAUzKzppyM02m5v8
-        B7Qa4qJhWGMYseFjtJvhoiH3kobZBtFBQ7EXSsNMe6I3VIBGCt5Qj8k3nPxK8w4cLcQR/1MYotUQJw0n
-        f9YmttOIbNuoq4bKKGYcQWcNmeOEnwHniDdUgEYK3tAK3lABGim8O4a1OZdApnwNXcQbMqCRgje0Sj6G
-        PfyLjS7SycPw6PUHDgONFKCRzt7D2SncKeca0EgBDiPZe4g3jB0Q0GFMJZFek3BzHTcQXZ8H4yaJ3CTG
-        SxKhqYyRJBIbMC6SiGvGg6MxkERWc5w/hiBnJtyWRMisOCyJhDngqiTi5YOTksiWG+5JIlieODZ5Raqc
-        cUkSkfLHGUnkKQQ35nUIUxQOSFZ2kKUwLEt2K4cIUigWZ+h/VA4QomgsSa69rdSRoARszAZm65X6Kvov
-        hbIl194yw3rhtSZJqZJn9dBwGl2XR2mSs9ORYemjGFKG5FqXCXLDcvdFQcGSa7NvIzduWK8fHFoYSCZZ
-        1DGk+wf3q9f/BEggDiJ4hPbpAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAFBUExURVPJqjKTd/LIrVpeZjA0PX6oevL59////zAuOjFtXzKWefbLrzc6Q4uMjh0nNbmgjSsx
+        O+vDqVVPUdlbQvKMHT6/uziV0iorOU1hU2qLaVJWXjAtOfHEpy4mNPbayEqnkDF9abe8vYZ0bPrp3x0i
+        Lq7i0xCKakOKetfIrDU8QWRmYc/IrEVIT8DIrPPMsfK9l/KIANlaQfKeUZXDtZOrw7/FsdW/tHmkx8S5
+        ueSQd+qnjk7BovKRKXPRuC0fMT+oizpmYGJ/Y0y+n2hdW31+gm5xdsns4pbbyE2ymT9LSKqxloSmi2jJ
+        qvLh1JHJq0ZVTanIq9bw6Jzdy1lyXHaddDxGRUidiUKGeFZmYdC5m6CGeAAUJgADIFmbgOLIrIzJq56u
+        kr23nHChhnRmYc6sl9ZLMdC9tSB4ZSwUK4K5qKvRxSrAGoMAAAoESURBVHhe7Z3/X9s2GsdDlhGGaUjo
+        dqGDkK4dFDZgt9u1d11HWqDlS8fabi10sB1327q7W///P2Cy9ZElJ8HRI3+Rkur9Q15EJNHnjezHsuy0
+        lTrn4HCnMknsHB7AjBuuon2yWI3cIsPJGj7JjjDE80mEG07qCIawUaxM6D4oOGCG+HFSqVcO8NOkclA5
+        xE+TymFlkutMyKT7eTwej8fj8Xg8Ho/H4/G8Sxx171xNdw+vGl/ubPQ6naWr6HR6p3fwyvHkqNapjaJz
+        Osbj2BV+7fbGAHPtNv/lzNIRXj92HPW4Qntj9/1h7G7M8Bd05Ciufn+4c1CPH6b5ww/sYfqHnVU8rLKH
+        tYcODP0Gz99ehNEgz/kwzhzjHeGF2en6NGPUQ31tamrKtuQZ30ZnrhZkinwUO2d4T4WNkBaRoW3J4yh8
+        rQaZ4TSjl8w8wnvIhlNTs9Yk9zCEL+EynEUMIt5kYBhiRxKFtH0DLsO5wffEniinZoYMC5LYDduv4DKc
+        V9ywk9nQwuYqxjDdEGOYh2FIqZLYD9vDj4WCl9hK8aashuWOJA6Hp3AZDn+RPCBmNmTMPnyATyuY10tR
+        +tRBxBB24ul3HoaMkiQxJ0upprtcsLaBd+RmyChD8kzMS6+Y1bxahGCvi3fkacgoXvK1UGwfLw5y2sYg
+        9+I5W86GjKIl7/T4vlhrzgzCf1NbkpNSRt6GjGIl9x71OkuhTnOQsJmd5T9K9F+AIaNQyQdnHzxi/PhZ
+        Pz+Gza/P+rouxpBR+D75edDPFn6TpDBDRrGSn1f7sGDIKFDSEUNGUZLuGDIKkXTKkJG/pGuGjJwlHTRk
+        5CnppiED/WbHGwq8ocAbaoN+s+MNBWNoePLsxdb6+vo2xCSXrHWQ72AwkvPz81+efvsv5DQHMU052doO
+        T5TgpMGytuFydAoWtJ5mlERSQ9hJIZLrQjDEO4LgF2Q1A1GNeFal+pkYho7fIq0JCGvCC5lBHxND5phB
+        EWkNeGYiWA3ufaJJYvvIoIi4dE7QN5Hg4qdPtfi5bw9AXjrIS2fg+KdHcNHAWuMIfkoaBuemx0fkJXNi
+        tI2ypPO3NOkbw8D0oIHAZF7QyyiHH+U0wOsFwVMkpoLAZAw3UnOMj4oITOYSHZdHy3BHRGAy6LZMkJgK
+        AlMxLTQZMC01SEzlmVoIWFVoFUH4wRLTgz4SU1FKadC62J9rNvKnObd/ocx8TYspElOJS2lQvcWy8JvX
+        8qbJ/m4XsaJpMUViKqKUBq3NBvIwmu18UP5gjYWWcLw0K6ZITAW9Bq2GTDPTfr67eyM7uy+PxQ0AjOYc
+        74p1VqZhXEo3pWA7/R5FEvFNHIzmvvhzmhVTRCbyb95pcEvZRNNvb6NyQyo25tGbWTFFZCIopS0pOOL+
+        PTpSsTkHw/8gMw1EJrLFu7yIDUfcvmeC3FAbbyJFw2KKyER4KQ32471wA7FyBDemMpo4kzIrpohMBIuj
+        c8Iw9WZ2U47Fp4ta00JmGohM44T3WI2HMM86GoM7xJnhAnZEo2KKzDRQSgs2fBkbbsLwV4Qmgcw0xKw0
+        Nhxxv74Zi/FWKsbQqJgiM40t9Bgf75vPeahcOcWHx/uhWTFFZhrrUYfV4Dc5iEiVI7KWNlBLzdbbkJlG
+        1B/rcT4+HhZQTONSKo6HjNIMRYdyR8z/kI8bxBmi0LA/KUKTQGYSopSqk5q8y6ky9ZZDaFRMEZqEXMII
+        9hXF0/SvB1GIv7jIEHshw2jujdAkUEoj1BPg4Xd70zkVXz4NaYiTJ4bRQgZCk0ApDQmq+8o5cI3f+ZwR
+        5fNqTWUEWW8mxRShSSRWg4P5hXChphAajYV4H4wwmZkiNIlEp9UgeHOxv1AEv1286bt8YVJMEZrCwGow
+        LqUUAXoQmMy9kZpCYjW4XEyKKVJTML6wlh2TYorUFEq/sCYxmXsjNYXyL6xJDC6xITUFdGYFg2KK1ATE
+        EoYVDIopYhOwWEqNiiliE1BK6bbCYBNalhUGm3RalOOvQTFFbAKylG7fvy75Omr64sNvYv4WOS6H/z+B
+        IHrN8m08C1mJmlbwLOQ2F8KzCKloUEwRm4Aspdv3v4z5HYZ//TCmCMPqJXLrg9gE0BWDGWIAr1//siRD
+        +v0KiK2PMiu1YUgvpsitT7yEYcmQXEyRWx+1lNowJK8KI7c+/MJahBVDcjFFbn2UWamVSkO+xIbc+qCj
+        ECuG5GKK3Nqos1IrhuRiiuDaKKXUkiF1VRjBtVFP8Lfv/44ZjTKnkRRkSC2mCK6NuhrMHCVXtmD2HDHY
+        pNOiCtKLKYJro6wG2yE4R3JdEFwbMTL2oK4KI7g2iS3GCtSFDATXRS2llqAWUyTXpW8JA5UgBC1Yq47g
+        Lfh9BG/Rqit4EsFbAHXujeS6JEvp3a8kvATd+7uEf3Np+bZC9JrqCp6F8KPFNp6FrHAhPIuIGgTUhQwk
+        1yWxGrz81UeSu6FPcO8vkn9wQxzTIsKGrLM2ajFFcl0SpdSOIbWYIrku6IRjyZA490ZyTZIX1iwZEufe
+        iK5JspTaMqQVU0TXJHlhzZYhrZgiuibJC2u2DGnFFNE1SV5Ys1VpaAsZiK5JsitbhsEswmuB6Hr03aNg
+        zZBUTJFdj/5ZqS1DUjFFdj3671FYvyvhu2jrn5L/8levKEQNiRY+SdrGs4ioZcjbYmjFFNn1UFaDrwKn
+        FRFoyh3aQgay62HzHgUVUjFFdj3QgX0QXgtk12Lgdi9bkIopwmvhwBIGh7SQgfBa9JdSa5BWhRFeC41S
+        Wg6kYorwWlziKGCfy1kBNFJA+BT2zrpg3h3+dxNAIwVopND9fwfge/IugP8wa6l3c+QoQiOF+P90cpEl
+        b+gNQ7yhVXI1bH78njt8jC/WeEMGNFLwhlbwhgrQSMEbUnjy+Nq1a4+f4FkGHDV8wvQ4mR3dNJSC2RWd
+        NFQFMys6acjNNpub/Ae0GuKiYVhjGLHhY7Sb4aIh95KG2QbRQUOxF0rDTHuiN1SARgreUI/JN5z8SvMO
+        HC3EEf9TGKLVECcNJ3/WJrbTiGzbqKuGyihmHEFnDZnjhJ8B54g3VIBGCt7QCt5QARopvDuGtTmXQKZ8
+        DV3EGzKgkYI3tEo+hj38i40u0snD8Oj1Bw4DjRSgkc7ew9kp3CnnGtBIAQ4j2XuIN4wdENBhTCWRXpNw
+        cx03EF2fB+MmidwkxksSoamMkSQSGzAukohrxoOjMZBEVnOcP4YgZybclkTIrDgsiYQ54Kok4uWDk5LI
+        lhvuSSJYnjg2eUWqnHFJEpHyxxlJ5CkEN+Z1CFMUDkhWdpClMCxLdiuHCFIoFmfof1QOEKJoLEmuva3U
+        kaAEbMwGZuuV+ir6L4WyJdfeMsN64bUmSamSZ/XQcBpdl0dpkrPTkWHpoxhShuRalwlyw3L3RUHBkmuz
+        byM3blivHxxaGEgmWdQxpPsH96vX/wRIIA4ieIT26QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
