formulario de estadisticas del sistema

--- a/Sistema_de_Ventas/StadisticsForm.resx
+++ b/Sistema_de_Ventas/StadisticsForm.resx
@@ -326,6 +326,9 @@
         7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq/wD/2Q==
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>34</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIADrEQAAZgAAAICAAAABACAAKAgBAFESAABAQAAAAQAgAChCAAB5GgEAMDAAAAEA
